--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -5,7 +5,6 @@
 body {
     background-color :#94911C;
     background-attachment: scroll;
-    background-image: url() ;
 }
 .survived-nav2 {
     background-color:#94911C;
